<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cybergear_m5</name>
  <version>0.0.1</version>
  <description>ROS 2 package suite of Cybergear</description>
  <maintainer email="chikuta@todo.todo">chikuta</maintainer>
  <license>MIT</license>

  <url type="bugtracker">https://github.com/project-sternbergia/cybergear_m5_ros2.git</url>
  <url type="repository">https://github.com/project-sternbergia/cybergear_m5_ros2/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cybergear_m5_driver</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
